--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript">
         window.$ = window.jQuery = require('./src/assets/js/jquery/jquery.min.js');
         window.IconKit = require('./src/lib/icon.js');
+        window.ScrotKit = require('./src/lib/scrot.js');
     </script>
     <script src="src/assets/js/bootstrap/bootstrap.min.js"></script>
     <script src="src/views/main.js" type="text/babel"></script>
